# CRO

./: .env.example  .gitignore  IMPLEMENTATION_PROMPTS.md  PLAN.md  README.md  pyproject.toml
.github/workflows/: cro-advisor.yml
data/fixtures/: sample_metrics.json
src/cro_agent/: __init__.py  attribution.py  backlog.py  config.py  graph.py  history.py  learning.py  regression.py  run.py  schemas.py  scoring.py  state.py  surface_map.py
src/cro_agent/clients/: github.py  posthog.py  slack.py
src/cro_agent/harness/: __init__.py  fingerprint.py  grounding.py
src/cro_agent/nodes/: recommend.py
tests/: conftest.py  test_attribution.py  test_dedupe.py  test_grounding.py  test_learning.py  test_regression.py  test_scoring.py  test_segment.py  test_surface_map.py
